[package]
name = "poker"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
itertools = "0.10"
colored = "3.0.0"
bevy = { version = "0.13", features = ["dynamic_linking"] }

# Enable optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable high optimizations for our code:
[profile.dev]
opt-level = 1
